Added a number of styles & content. Structure is coming together.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gray Bike
+title: GRAY BIKE
 email: pavan@graybike.co
 description: "No nonsense software design, development, and consulting."
 baseurl: ""
