Added a simpler tagline.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: GRAY BIKE
 email: pavan@graybike.co
-description: "Straightforward software design, engineering, and consulting."
+description: "Software design, engineering, and consulting."
 baseurl: ""
 url: "http://graybike.co"
 
