adjust tagline & description

--- a/data/site_info.yml
+++ b/data/site_info.yml
@@ -1,1 +1,1 @@
-description: "Gray Bike is a creative technology company specializing in data visualization."
+description: "Gray Bike is a solo software consultancy based in San Francisco, California."
