--- a/data/site_info.yml
+++ b/data/site_info.yml
@@ -1,1 +1,1 @@
-description: "Gray Bike is a software studio based in San Francisco, California."
+description: "Gray Bike is a creative technology consultancy based in San Francisco, California."
